--- a/main.css
+++ b/main.css
@@ -1,14 +1,19 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: rgb(0, 0, 0);
+  width: 100vw;
 }
 li {
   float: left;
 }
-li a{
+li a {
   display: inline-block;
   color: white;
   text-align: center;
@@ -17,4 +22,7 @@ li a{
 }
 li a:hover {
   background-color: red;
+}
+#footer {
+  margin-left: 600px;
 }
