--- a/main.css
+++ b/main.css
@@ -15,10 +15,10 @@ li {
 }
 li a {
   display: inline-block;
-  color: white;
+  color: white !important;
   text-align: center;
   padding: 14px 16px;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 li a:hover {
   background-color: red;
